test/expected/large/casrowsets/Deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    foo.com/duname: cas-row-sets
    foo.com/duversion: 2.5.12-20190923.1569266193622
    foo.com/version: 2.5.12
  labels:
    app.kubernetes.io/name: casrowsets
    helm.sh/chart: casrowsets-2.5.12
  name: casrowsets
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: casrowsets
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: casrowsets
        app.kubernetes.io/name: casrowsets
    spec:
      containers:
      - envFrom:
        - configMapRef:
            name: foo-shared-config
        - configMapRef:
            name: foo-java-config
        image: repo.foo.com/dmdatap-125.0.0-x64_redhat_linux_7-docker-prod/foo-casrowsets:2.5.12-20190923.1569266193622
        imagePullPolicy: IfNotPresent
        name: casrowsets
        ports:
        - containerPort: 8080
          name: http
          protocol: TCP
        resources: {}
      initContainers:
      - envFrom:
        - configMapRef:
            name: foo-shared-config
        image: docker.foo.com/yesbut/init-blocker:1.7
        name: init-blocker
